<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.getmyapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_nav_home_to_nav_missing"
            app:destination="@id/nav_missing" />
        <action
            android:id="@+id/action_nav_home_to_nav_found"
            app:destination="@id/nav_found" />
    </fragment>
    <fragment
        android:id="@+id/nav_login"
        android:name="com.example.getmyapp.ui.login.LoginFragment"
        android:label="@string/menu_login"
        tools:layout="@layout/fragment_login" >
        <action
            android:id="@+id/action_nav_login_to_nav_register"
            app:destination="@id/nav_register" />
        <action
            android:id="@+id/action_nav_login_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <fragment
        android:id="@+id/nav_missing"
        android:name="com.example.getmyapp.ui.missing.MissingFragment"
        android:label="@string/menu_missing"
        tools:layout="@layout/fragment_missing" >
        <action
            android:id="@+id/action_nav_missing_to_nav_add_report"
            app:destination="@id/nav_add_report" />
        <action
            android:id="@+id/action_nav_missing_to_nav_extended_report"
            app:destination="@id/nav_extended_report" />
    </fragment>
    <fragment
        android:id="@+id/nav_found"
        android:name="com.example.getmyapp.ui.found.FoundFragment"
        android:label="@string/menu_found"
        tools:layout="@layout/fragment_found" >
        <action
            android:id="@+id/action_nav_found_to_nav_add_report"
            app:destination="@id/nav_add_report" />
        <action
            android:id="@+id/action_nav_found_to_nav_extended_report"
            app:destination="@id/nav_extended_report" />
    </fragment>
    <fragment
        android:id="@+id/nav_register"
        android:name="com.example.getmyapp.ui.login.RegisterFragment"
        android:label="@string/menu_register"
        tools:layout="@layout/fragment_register" >
        <action
            android:id="@+id/action_nav_register_to_nav_login"
            app:destination="@id/nav_login" />
    </fragment>
    <fragment
        android:id="@+id/nav_changelang"
        android:name="com.example.getmyapp.ui.changelang.ChangelangFragment"
        android:label="@string/menu_changelang"
        tools:layout="@layout/fragment_changelang" />
    <fragment
        android:id="@+id/nav_donate"
        android:name="com.example.getmyapp.ui.iap.InAppPurchaseFragment"
        android:label="@string/menu_user_overview"
        tools:layout="@layout/fragment_iap" />
    <fragment
        android:id="@+id/nav_add_report"
        android:name="com.example.getmyapp.ui.report.AddReportFragment"
        android:label="@string/menu_add_report" >
        <action
            android:id="@+id/action_nav_add_report_to_nav_missing"
            app:destination="@id/nav_missing" />
        <action
            android:id="@+id/action_nav_add_report_to_nav_found"
            app:destination="@id/nav_found" />
    </fragment>
    <fragment
        android:id="@+id/nav_user_overview"
        android:name="com.example.getmyapp.ui.user.UserOverviewFragment"
        android:label="@string/menu_user_overview" >
        <action
            android:id="@+id/action_nav_user_overview_to_nav_login"
            app:destination="@id/nav_login" />
        <action
            android:id="@+id/action_nav_user_overview_to_nav_home"
            app:destination="@id/nav_home" />
    </fragment>
    <action android:id="@+id/action_global_nav_user_overview" app:destination="@id/nav_user_overview" />
    <fragment
        android:id="@+id/nav_extended_report"
        android:name="com.example.getmyapp.ui.extendedreport.ExtendedReportFragment">
    </fragment><action android:id="@+id/action_global_nav_login" app:destination="@id/nav_login"/>
    <fragment
        android:id="@+id/nav_aboutus"
        android:name="com.example.getmyapp.ui.aboutus.AboutUsFragment"
        android:label="About Us" />
</navigation>