...
    <string name="name">Name</string>
    <string name="age">Age</string>
    <string name="gender">Gender</string>
    <string name="chipNo">Chip Number</string>
    <string name="save_button">SAVE</string>

    <string name="generic_error">Please provide an input</string>
    <string name="Donation">Donation</string>
    <string name="text_donate">Thank you for your support!</string>
    <string name="user_overview_title">User Overview</string>
    <string name="user_overview_first_name">First Name:</string>
    <string name="user_overview_last_name">Last Name:</string>
    <string name="user_overview_mail_address">Mail Address:</string>
...
